Contact and Comment Updated again lol

--- a/contact_&_comment.html
+++ b/contact_&_comment.html
@@ -160,27 +160,27 @@
 				</div>
 				
 				<p>Name</p>
-				<div class="box">
+				<div class="boxWhite">
 				</div>
 
 				<p>Phone</p>
-				<div class="box">
+				<div class="boxWhite">
 				</div>
 
 				<p>Email</p>
-				<div class="box">
+				<div class="boxWhite">
 				</div>
 					
 				<p>Address</p>
-				<div class="box">
+				<div class="boxWhite">
 				</div>
 
 				<p>Feedbacks or Comments (Maximum 3,000 characters)</p>
-				<div class="box">
+				<div class="boxWhite">
 				</div>   
 			</div>
 		</section>
-
+		
 		<!-- https://www.progress.com/moveit -->
 		<section id="ATT" class="info3">
 			<div>
