added alt descriptios

--- a/actionplan.html
+++ b/actionplan.html
@@ -93,7 +93,7 @@
                 <div class="box_fill">
                     <h2 class="center-text">Art</h2>
                     <!-- image here -->
-                    <img class="box_img_fill" src="greg_img/img/P4_Images/Student_art.jpg" alt="">
+                    <img class="box_img_fill" src="greg_img/img/P4_Images/Student_art.jpg" alt="A mural of student art in vancouver">
                 </div>
             </a>
 
@@ -101,7 +101,7 @@
                 <div class="box_fill center">
                     <h2 class="center-text">Infrastructure</h2>
                     <!-- image here -->
-                    <img class="box_img_fill" src="greg_img/img/P4_Images/Pedestrian_or_bike_activated_signals.jpg" alt="">
+                    <img class="box_img_fill" src="greg_img/img/P4_Images/Pedestrian_or_bike_activated_signals.jpg" alt="A image of a pedestrian activated crossing signal">
                 </div>
             </a>
 
