Jonathan Updated Contact Final1

--- a/contact_&_comment.html
+++ b/contact_&_comment.html
@@ -12,21 +12,10 @@
 
 	</head>
 
-	<!-- Button from http://androidcss.com/css/css3-floating-button-tutorial-->
-
-<a href="#top" class="float">
-    <i class="fa fa-envelope my-float"></i>
-    </a>
-    <div class="label-container">
-    <div class="label-text">Back to top</div>
-    <i class="fa fa-play label-arrow"></i>
-    </div>
-
-
 	<body>
 	<div class="wrapper">
 		<!-- Top Container, holds the main header/image for the page -->
-		<section id="top" class="top-container">
+		<section class="top-container">
             <header class="showcase-top">
                 <h1>Contact & Comments</h1>
             </header>
@@ -123,8 +112,9 @@
 			
 
 		</section>
-
-		<section class="box_info">
+		
+		<!-- https://unsplash.com/photos/X_JsI_9Hl7o -->
+		<section class="box_info_image1">
 
 			<div>
 				<h4>Do you have feedback or a comment? We'll direct it to the right department to review and follow up if necessary.</h4>
@@ -147,18 +137,16 @@
 			</div>
 		</section>
 
-		<section class="box_info">
+		<!-- https://unsplash.com/photos/vbxyFxlgpjM -->
+		<section class="box_info_image2">
 			<div>
 				<h4>About you</h4>
 				<p>We will only use your contact information to follow up if necessary. View our privacy policy</p>
 			</div>
 		</section>
 
-		<section class="box_info"> 
+		<section class="box_info2"> 
 			<div class="boxCenter">
-				<div class="grid">
-				</div>
-				
 				<p>Name</p>
 				<div class="boxWhite">
 				</div>
@@ -180,7 +168,7 @@
 				</div>   
 			</div>
 		</section>
-		
+
 		<!-- https://www.progress.com/moveit -->
 		<section id="ATT" class="info3">
 			<div>
