Jonathan Contact and Comments FINAL2

--- a/contact_&_comment.html
+++ b/contact_&_comment.html
@@ -60,7 +60,7 @@
 				<figure>
 					<img class="box-img" src="Image/Crosswalk.jpg" alt="Image that contains a crosswalk where people can cross" width="960" height="606">
 						<figcaption>
-							School crosswalks markings
+							<h4>School crosswalks markings</h4>
 						</figcaption>
 				</figure>
 			</div>
@@ -69,7 +69,7 @@
 				<figure>
 					<img class="box-img" src="Image/Signage.jpg" alt="Sign that says parking only 3 mins and no stop sign" width="960" height="720">
 						<figcaption>
-							School signs snf zones, including:
+							<h4>School signs snf zones, including:</h4>
                     	</figcaption>
 				</figure>
 			</div>
@@ -78,7 +78,7 @@
 				<figure>
 					<img class="box-img" src="Image/ParkingCars.jpeg" alt="Image that contains cars parking in the parking lot" width="800" height="473">
 						<figcaption>
-							Parking 3 minutes sign
+							<h4>Parking 3 minutes sign</h4>
 						</figcaption>
 				</figure>
 			</div>
@@ -87,7 +87,7 @@
 				<figure>
 					<img class="box-img" src="Image/schoolCrosswalk.jpg" alt="Sign that says people can cross the crosswalk" width="1000" height="1500">
 						<figcaption>
-							School crosswalk sign
+							<h4>School crosswalk sign</h4>
 						</figcaption>
 				</figure>
 			</div>
@@ -96,7 +96,7 @@
 				<figure>
 					<img class="box-img" src="Image/LoadingAndUnloading.JPG" alt="Sign that says no parking is allowed only loading or unloading" width="799" height="638">
 						<figcaption>
-							Loading and unloading zone
+							<h4>Loading and unloading zone</h4>
 						</figcaption>
 				</figure>
 			</div>
@@ -105,7 +105,7 @@
 				<figure>
 					<img class="box-img" src="Image/no-parking-arrows-both-sides.jpg" alt="Sign that says no parking" width="770" height="411">
 						<figcaption>
-							No stopping, No parking, and passenger zone
+							<h4>No stopping, No parking, and passenger zone</h4>
 						</figcaption>
 				</figure>
 			</div>
@@ -189,17 +189,15 @@
 						<li>Files attached will expire after 60 minutes. If you do not submit within 60 minutes of attaching files, you will need to re-attach your files.</li>		
 					</ul>
 			</div>
+				<nav class="sub-nav">
+					<div class="floatBottomRight">
+						<a href="#ATT" class="info3">
+							<h3>Browse or Drop your files</h3>
+							<p>A maximum of 5 files</p>
+						</a>
+					</div>
+				</nav>
 		</section>
-
-		<nav class="sub-nav">
-			<div class="floatCenter">
-				<a href="#ATT" class="info3">
-					<h3>Browse or Drop your files</h3>
-					<p>A maximum of 5 files</p>
-				</a>
-			</div>
-		</nav>
-		
 
 		
 	</div>
