Commented out one banner to increase clarity (can go over later if needed), fixed typos

--- a/contact_&_comment.html
+++ b/contact_&_comment.html
@@ -40,6 +40,7 @@
 			<header class="showcase-mid">
 				<h2>Contact Us</h2>
 				<h3>schoolactivetravel@vancouver.ca</h3>
+				<p>Email to request to participate in the formal<br>action plan process.</p>
 			</header>
 		</section>
 
@@ -47,10 +48,8 @@
 		<!-- https://www.today.com/parents/7-rules-parents-must-not-break-school-drop-line-t135643 -->
 		<section class="info">
 			<div>
-				<h3>
-					Email to request to participate in the formal action plan process.
-				</h3>
-				<h4>You may request the following related to school drop-off or pickup:</h3>
+				
+				<h4>You may request the following related to school drop-off or pickup:</h4>
 			</div>
 		</section>
 
@@ -138,12 +137,12 @@
 		</section>
 
 		<!-- https://unsplash.com/photos/vbxyFxlgpjM -->
-		<section class="box_info_image2">
+		<!-- <section class="box_info_image2">
 			<div>
 				<h4>About you</h4>
 				<p>We will only use your contact information to follow up if necessary. View our privacy policy</p>
 			</div>
-		</section>
+		</section> -->
 
 		<section class="box_info2"> 
 			<div class="boxCenter">
@@ -163,7 +162,7 @@
 				<div class="boxWhite">
 				</div>
 
-				<p>Feedbacks or Comments (Maximum 3,000 characters)</p>
+				<p>Feedback or Comments (Maximum 3,000 characters)</p>
 				<div class="boxWhite">
 				</div>   
 			</div>
