Update mid-container blurbs Art/Infra

--- a/Infrastructure.html
+++ b/Infrastructure.html
@@ -55,7 +55,7 @@
 
         <section class="mid-container">
             <header class="showcase-mid">
-                <h3>Infrastructure changes to make the city safer</h3>
+                <h3>Infrastructure enhancements that make the city safer for pedestrians, transit-users, and motorists.</h3>
                
             </header>
         </section>
