--- a/art.html
+++ b/art.html
@@ -62,7 +62,7 @@
     
     <section class="mid-container">
         <header class="showcase-mid">
-            <h3>Art and events to create a safer city</h3>
+            <h3>Art and events that help build community and enhance the culture of the city.</h3>
            
         </header>
     </section>
