Jonathan Updated CSS and HTML Final

--- a/contact_&_comment.html
+++ b/contact_&_comment.html
@@ -29,7 +29,7 @@
                 <li><a href="initiatives.html">Initiatives</a></li>
                 <li><a href="art.html">Art</a></li>
                 <li><a href="Infrastructure.html">Infrastructure</a></li>
-                <li><a href="contact & comment.html">Contact</a></li>
+                <li><a href="contact_&_comment.html">Contact</a></li>
                 <li><a target="_blank" href="https://vancouver.ca/">Vancouver.ca</a></li>
 
             </ul>
@@ -50,7 +50,7 @@
 				<h3>
 					Email to request to participate in the formal action plan process.
 				</h3>
-				<h4>You may request the following related to school drop-off or pickup:</h3>
+				<h4>You may request the following related to school drop-off or pickup:</h4>
 			</div>
 		</section>
 
