--- a/art.html
+++ b/art.html
@@ -73,7 +73,7 @@
          <img class="box-img" src ="img/Street_mural.jpeg" alt="A street mural on a tall wall"width=720 height=350>
           <p>Street murals are a school or community-led initiative, supported by the City, to apply artwork to the street as a traffic-calming measure.</p>
         
-            <p> Pictured:<a class="inline_link" href="https://www.vsb.bc.ca/schools/sir-sandford-fleming/Pages/default.aspxs">Sir Sandford Fleming Elementary</a> .</p>
+            <p> Pictured: <a class="inline_link" href="https://www.vsb.bc.ca/schools/sir-sandford-fleming/Pages/default.aspxs">Sir Sandford Fleming Elementary</a></p>
 
        </div>
 
@@ -82,7 +82,7 @@
             <img class="box-img" src ="img/Student_art.jpg" alt="Art work created by students" width=720 height=350>
             <p>Signs and artworks created by students raise awareness of travel safety around the school. </p>
 
-                <p> Pictured:<a class="inline_link" href="https://www.vsb.bc.ca/schools/sir-sandford-fleming/Pages/default.aspxs">Sir Sandford Fleming Elementary</a> .</p>
+                <p> Pictured: <a class="inline_link" href="https://www.vsb.bc.ca/schools/sir-sandford-fleming/Pages/default.aspxs">Sir Sandford Fleming Elementary</a></p>
        </div>
 
         <div class= "box_extend">
