--- a/contact_&_comment.html
+++ b/contact_&_comment.html
@@ -12,6 +12,15 @@
 
 	</head>
 
+	<a href="#top" class="float">
+		<i class="fa fa-envelope my-float"></i>
+		</a>
+		<div class="label-container">
+		<div class="label-text">Back to top</div>
+		<i class="fa fa-play label-arrow"></i>
+		</div>
+	
+
 	<body>
 	<div class="wrapper">
 		<!-- Top Container, holds the main header/image for the page -->
