--- a/initiatives.html
+++ b/initiatives.html
@@ -93,7 +93,8 @@
             <div>
                 <h2>School Streets </h2>
                 <p>In spring 2021, we piloted School Streets at three local elementary schools. A School Street is a car-free block beside a school open to walking, biking, and rolling during pick-up and drop-off (30 to 45 minutes depending on location).
-                <br>Learn more about the pilot.</p>
+                </p>
+                <p>Learn more about the pilot.</p>
                     
             </div>
         </section>
@@ -184,7 +185,8 @@
             <div>
                 <h2>Grandma on the Move </h2>
                 <p>We partnered with award-winning children’s entertainers Will Stroet of Will's Jams and the enduring Charlotte Diamond to inspire safe, courteous, and mindful road behaviour – especially for our most vulnerable and at-risk groups.
-                <br>Learn more and download the helpful resources</p>
+                </p>
+                <p>Learn more and download the helpful resources</p>
                     
             </div>
         </section>
