--- a/Infrastructure.html
+++ b/Infrastructure.html
@@ -27,6 +27,16 @@
 
 	</head>
 
+
+    <a href="#top" class="float">
+        <i class="fa fa-envelope my-float"></i>
+        </a>
+        <div class="label-container">
+        <div class="label-text">Back to top</div>
+        <i class="fa fa-play label-arrow"></i>
+        </div>
+
+        
     <body>
 
         <nav class="main-nav">
@@ -65,48 +75,48 @@
             <h4>Speed Humps</h4>
              <img class="box-img" src ="img/Speed_humps.jpg" alt="Speed Humps near a school" width=720 height=350>
              <p>Speed humps are a traffic calming measure used to reduce vehicle volume and speed on local streets.</p>
-              <p> Pictured: <a class="inline_link" href="https://www.vsb.bc.ca/schools/lord-kitchener/Pages/default.aspx">Lord Kitchener Elementary</a> , W 24th Ave between Collingwood St and Blenheim St.
+              <p> Pictured: <a class="inline_link_dark" href="https://www.vsb.bc.ca/schools/lord-kitchener/Pages/default.aspx">Lord Kitchener Elementary</a> , W 24th Ave between Collingwood St and Blenheim St.
             </p>
         </div>
         <div class="box_extend">
             <h4>Barriers</h4>
              <img class="box-img" src="img/Barriers.jpg" alt="Barriers near a sidewalk that help protect people from cars." width=720 height=300>
             <p>These low-gravity concrete barriers regulate traffic flow and discourage U-turn activity.</p>
-             <p> Pictured: <a class="inline_link" href="https://www.vsb.bc.ca/schools/eric-hamber/Pages/default.aspx">Eric Hamber Secondary</a> , Willow St at W 35th Ave.
+             <p> Pictured: <a class="inline_link_dark" href="https://www.vsb.bc.ca/schools/eric-hamber/Pages/default.aspx">Eric Hamber Secondary</a> , Willow St at W 35th Ave.
             </p>
         </div>
         <div class="box_extend">
             <h4>New Sidewalks and Curbs</h4>
             <img class="box-img" src ="img/New_sidewalks_and_curbs.jpg" alt="New sidewalks and curbs in front of a school." width=730 height=350>
             <p>Sidewalk segments address gaps in the walking network. Sidewalks and curbs provide a continuous walking experience separating people from traffic.</p>
-            <p> Pictured: <a class="inline_link" href="https://www.vsb.bc.ca/schools/lord-kitchener/Pages/default.aspx">Lord Kitchener Elementary</a> , Collingwood St between W 24th Ave and W King Edward Ave.
+            <p> Pictured: <a class="inline_link_dark" href="https://www.vsb.bc.ca/schools/lord-kitchener/Pages/default.aspx">Lord Kitchener Elementary</a> , Collingwood St between W 24th Ave and W King Edward Ave.
             </p>
         </div>
         <div class="box_extend">
             <h4>Curb Ramps</h4>
             <img class="box-img" src="img/Curb_ramps.jpg" alt="A curb ram that makes it easier for bikes and wheelchairs to get onto the sidewalk." width=720 height=350>
-            <p>Curb ramps and bus pads improve accessibility for people using wheelchairs, walkers, and strollers.</p> <p> Pictured: <a class="inline_link" href="https://www.vsb.bc.ca/schools/sir-sandford-fleming/Pages/default.aspx">Sir Sandford Fleming Elementary</a> , Lanark St at E 47th Ave.
+            <p>Curb ramps and bus pads improve accessibility for people using wheelchairs, walkers, and strollers.</p> <p> Pictured: <a class="inline_link_dark" href="https://www.vsb.bc.ca/schools/sir-sandford-fleming/Pages/default.aspx">Sir Sandford Fleming Elementary</a> , Lanark St at E 47th Ave.
             </p>
         </div>
         <div class="box_extend">
             <h4>New Marked and Raised Crosswalks</h4>
             <img class="box-img" src="img/New_marked_and_raised_crosswalks.jpg" alt="Raised crosswalk infront of a school to slow down cars and protect students." width=960 height=542 >
             <p>Crosswalks alert people driving to expect people walking. Raised crosswalks reduce vehicle speed and increases pedestrian visibility.</p> 
-            <p> Pictured: <a class="inline_link" href="https://www.vsb.bc.ca/schools/thunderbird/Pages/default.aspx">Thunderbird Elementary</a>, Cassiar St at Hermon Drive.
+            <p> Pictured: <a class="inline_link_dark" href="https://www.vsb.bc.ca/schools/thunderbird/Pages/default.aspx">Thunderbird Elementary</a>, Cassiar St at Hermon Drive.
             </p>
         </div>
         <div class="box_extend">
             <h4>Rapid Flashing Beacons</h4>
             <img class="box-img" src="img/Rapid_flashing_beacons.jpg" alt="Rapid flashing lights above speed sign that go off when cars go too fast." width=720 hight=350>
             <p>These high intensity amber flashing beacons installed at crosswalks, activated by a pedestrian push-button. The beacons increase pedestrian visibility and alert people driving to yield at marked crosswalks. </p>
-            <p>Pictured: <a class="inline_link" href="https://www.vsb.bc.ca/schools/renfrew/Pages/default.aspx">Renfrew Elementary</a> , Cassiar St at E 22nd Ave.
+            <p>Pictured: <a class="inline_link_dark" href="https://www.vsb.bc.ca/schools/renfrew/Pages/default.aspx">Renfrew Elementary</a> , Cassiar St at E 22nd Ave.
             </p>
         </div>
       <div class="box_extend">
           <h4>Pedestrian Crossing Improvement</h4>
          <img class="box-img" src="img/Pedestrian_signalized_crossing_improvement.jpg" alt="Improved signs to help the pedestrians cross the street." width=720 hight=350 >
          <p>Countdown timers show how much time is left to cross the street at an intersection. This reduces the number of people crossing the intersection when the light changes.</p>
-         <p> Pictured: <a class="inline_link" href="https://www.google.com/maps/place/Blenheim+St+%26+W+King+Edward+Ave,+Vancouver,+BC+V6L+2Z2/@49.2499503,-123.1785793,3a,75y,89.84h,90t/data=!3m6!1e1!3m4!1sil2lftYnR_76xb6dsibamA!2e0!7i3328!8i1664!4m5!3m4!1s0x5486730e52339607:0x13817990e679e5de!8m2!3d49.2499337!4d-123.1785777"> Blenheim St at W King Edward Ave.</a>
+         <p> Pictured: <a class="inline_link_dark" href="https://www.google.com/maps/place/Blenheim+St+%26+W+King+Edward+Ave,+Vancouver,+BC+V6L+2Z2/@49.2499503,-123.1785793,3a,75y,89.84h,90t/data=!3m6!1e1!3m4!1sil2lftYnR_76xb6dsibamA!2e0!7i3328!8i1664!4m5!3m4!1s0x5486730e52339607:0x13817990e679e5de!8m2!3d49.2499337!4d-123.1785777"> Blenheim St at W King Edward Ave.</a>
         </p>
      </div>
         <div class="box_extend">
@@ -119,13 +129,13 @@
             <h4>Protected Bicycle Lane</h4>
            <img class="box-img" src="img/Protected_bicycle_lane.jpg" alt="Bike lanes on the steet that make biking more safe." width=960 hight=638 >
            <p>On-street bike facility physically separated from motor vehicles. Can be elevated or protected by various treatments such as a curb, median, and/or bollards.</p> 
-           <p>Pictured: <a class="inline_link" href="https://www.vsb.bc.ca/schools/eric-hamber/Pages/default.aspx">Eric Hamber Secondary </a> , Willow St between W 33rd Ave and W 35th Ave</p>
+           <p>Pictured: <a class="inline_link_dark" href="https://www.vsb.bc.ca/schools/eric-hamber/Pages/default.aspx">Eric Hamber Secondary </a> , Willow St between W 33rd Ave and W 35th Ave</p>
           </div>
           <div class="box_extend">
             <h4>Bus Pad</h4>
            <img class="box-img" src="img/Bus_pad.jpg" alt="A bus pad that helps people in wheelchairs and walkers access the bus more easily." width=960 hight=657 >
            <p>Improves access for people using wheelchairs, walkers, and strollers to get to the bus waiting area.</p>
-           <p>Pictured: <a class="inline_link" href="https://www.vsb.bc.ca/schools/carnarvon/Pages/default.aspx">Carnarvon Community Elementary</a> , W 16th Ave at Balaclava St.
+           <p>Pictured: <a class="inline_link_dark" href="https://www.vsb.bc.ca/schools/carnarvon/Pages/default.aspx">Carnarvon Community Elementary</a> , W 16th Ave at Balaclava St.
             </p>
         </div>
      </section>
@@ -133,7 +143,7 @@
        </div>
 
        <!-- Footer -->
-       <footer><a class="inline_link" href="https://www.sfu.ca/siat.html
+       <footer><a class="inline_link_dark" href="https://www.sfu.ca/siat.html
         ">SFU</a> IAT235 P4 by Greg, Andy, Jacob, Jonathan &copy; 2021</footer>
     </body>   
     
